--- a/app/Presentation/Users/Templates/default.latte
+++ b/app/Presentation/Users/Templates/default.latte
@@ -4,7 +4,7 @@
 
 <p><a n:href="Users:edit">+ Přidat nového uživatele</a></p>
 
-<table border="1" cellpadding="5">
+<table>
     <tr>
         <th>ID</th>
         <th>Jméno</th>
