--- a/app/Presentation/Users/Templates/edit.latte
+++ b/app/Presentation/Users/Templates/edit.latte
@@ -1,5 +1,5 @@
-<h1>{if isset($user)}Upravit uživatele{else}Vytvořit uživatele{/if}</h1>
+<h1>{if isset($user)}Edit user{else}Add user{/if}</h1>
 
 {control userForm}
 
-<p><a n:href="Users:default">← Zpět na seznam</a></p>
+<p><a n:href="Users:default">Back to the list</a></p>
