--- a/app/Presentation/Home/default.latte
+++ b/app/Presentation/Home/default.latte
@@ -1,41 +1,61 @@
 <base href="{$basePath}/">
+<link rel="stylesheet" href="{$basePath}/css/style.css">
 
-<h1>{$message}</h1>
+<div class="container">
 
-{if $editing}
-    <h3>Edit user</h3>
-{else}
-    <h3>Add user</h3>
-{/if}
+    <h1>Library reservation system</h1>
 
-{control userForm}
+    {if isset($message)}
+        <div class="flash">{$message}</div>
+    {/if}
 
+    <div class="form-section">
+        {if $editing}
+            <h2>Edit users</h2>
+        {else}
+            <h2>Add new users</h2>
+        {/if}
 
-<h3>Users list</h3>
+        <div class="form-wrapper">
+            {control userForm}
+        </div>
+    </div>
 
-<table border="1" cellpadding="5">
-    <tr>
-        <th>ID</th>
-        <th>Username</th>
-        <th>First name</th>
-        <th>Last name</th>
-        <th>Email</th>
-        <th>Role</th>
-        <th>Actions</th>
-    </tr>
+    <div class="list-section">
+        <h2>List of users</h2>
 
-    {foreach $users as $u}
-        <tr>
-            <td>{$u->id}</td>
-            <td>{$u->username}</td>
-            <td>{$u->first_name}</td>
-            <td>{$u->last_name}</td>
-            <td>{$u->email}</td>
-            <td>{$u->role}</td>
-            <td>
-                <a n:href="default id => $u->id">Edit</a> |
-                <a n:href="delete! id => $u->id" onclick="return confirm('Delete this user?')">Delete</a>
-            </td>
-        </tr>
-    {/foreach}
-</table>
+        <table border ="1">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>username</th>
+                    <th>name</th>
+                    <th>last name</th>
+                    <th>email</th>
+                    <th>role</th>
+                    <th>action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {foreach $users as $u}
+                    <tr>
+                        <td>{$u->id}</td>
+                        <td>{$u->username}</td>
+                        <td>{$u->first_name}</td>
+                        <td>{$u->last_name}</td>
+                        <td>{$u->email}</td>
+                        <td>{$u->role}</td>
+                        <td class="actions">
+                            <a n:href="default id => $u->id" class="btn edit">edit</a>
+                            <a n:href="delete! id => $u->id"
+                               onclick="return confirm('Are you sure you want to delete this user?')"
+                               class="btn delete">delete</a>
+                        </td>
+                    </tr>
+                {/foreach}
+
+                
+            </tbody>
+        </table>
+    </div>
+</div>
